--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "matomo-client",
-  "version": "1.0.0",
+  "name": "@mbinjamil/matomo-client",
+  "version": "0.0.2",
   "description": "A thin wrapper around Matomo analytics",
   "keywords": [
     "analytics"
   ],
+  "homepage": "https://github.com/binjamil/matomo-client",
+  "bugs": {
+    "url": "https://github.com/binjamil/matomo-client/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/binjamil/matomo-client.git"
+  },
   "license": "MIT",
   "author": "Muhammad Bin Jamil",
   "files": [
@@ -18,9 +26,11 @@
   "scripts": {
     "build": "npm run build:types && npm run build:js",
     "build:js": "node build.mjs",
-    "build:types": "tsc --emitDeclarationOnly"
+    "build:types": "tsc --emitDeclarationOnly",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.2",
     "esbuild": "^0.21.3",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
